# serenity

./: .clang-tidy  CMakeLists.txt  foo  test.js  test.scratch
AK/: AATree.h  Any.h  Arch.h  Checked.h  DeprecatedString.cpp  DeprecatedString.h  Error.cpp  Error.h  Format.cpp  Format.h  Forward.h  Platform.h  PrintfImplementation.h  Rope.cpp  Rope.h  SourceGenerator.h  StdLibExtraDetails.h  StdLibExtras.h  String.cpp  String.h  StringData.h  StringUtils.h  StringView.h  Trie.h  Types.h  URL.h  Vector.h  _Types.h
Base/etc/: LookupServer.ini  SystemServer.ini
Base/home/: git-remote-httpx
Kernel/: Process.h  Syscall.cpp  Thread.cpp  Thread.h  UnixTypes.h
Kernel/API/: Syscall.h
Kernel/FileSystem/: UnveilNode.h
Kernel/Syscalls/: execve.cpp  mmap.cpp  sigaction.cpp  unveil.cpp
Libraries/LibGUI/: ShellSyntaxHighlighter.cpp
Libraries/LibLine/: Editor.cpp
Meta/: build-root-filesystem.sh  lint-ports.py  run.sh
Meta/CMake/: jakt.cmake
Meta/Lagom/: CMakeLists.txt
Ports/: .hosted_defs.sh  .port_include.sh  AvailablePorts.md
Ports/citron/: package.sh
Ports/gc/: package.sh
Ports/jdk/: package.sh
Services/WindowServer/: ClientConnection.cpp  ClientConnection.h  WindowServer.ipc
Shell/: AST.cpp  AST.h  Formatter.cpp  Formatter.h  Forward.h  NodeVisitor.cpp  NodeVisitor.h  Parser.cpp  Parser.h  Shell.cpp  Shell.h
Shell/Tests/: match.sh  valid.sh
Userland/: CMakeLists.txt  test-crypto.cpp  test0rope.cpp  whoami.cpp  wm_event.cpp
Userland/Demos/Fire/: CMakeLists.txt  fire.jakt
Userland/DevTools/RegexDebugger/: CMakeLists.txt  main.cpp  main_window.gml
(+385 files in other folders)
